raffia/tests/error/scss/at-rule/use/with-missing-keyword.snap
---
source: raffia/tests/error.rs
---
error: expect token `$var`, but found `<ident>`
  ┌─ with-missing-keyword.scss:1:20
  │
1 │ @use "other" with (a);
  │                    ^


